[gd_scene load_steps=15 format=2]

[ext_resource path="res://textures/gps.png" type="Texture" id=1]
[ext_resource path="res://textures/stop.png" type="Texture" id=2]
[ext_resource path="res://textures/ringofire.png" type="Texture" id=3]
[ext_resource path="res://scenes/main_menu/DroidSans.tres" type="DynamicFont" id=4]
[ext_resource path="res://textures/Phone_3.png" type="Texture" id=5]
[ext_resource path="res://scenes/main_menu/DroidSans-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://textures/lava_1_diffuseOriginal.png" type="Texture" id=7]
[ext_resource path="res://scenes/main_menu/controls.gd" type="Script" id=8]
[ext_resource path="res://sound/mouse_over.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/select.wav" type="AudioStream" id=10]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.909804, 0.494118, 0.494118, 1 )

[sub_resource type="DynamicFont" id=3]
size = 19
outline_size = 5
outline_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
extra_spacing_top = 2
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=5]
resource_name = "fade"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="background" type="TextureRect" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.499169, 0.292217 )
texture = ExtResource( 7 )

[node name="explaincontrols" type="RichTextLabel" parent="Control"]
margin_left = 26.0
margin_top = 53.0
margin_right = 309.0
margin_bottom = 510.0
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 4 )
custom_styles/normal = SubResource( 2 )
text = " MOVEMENT:
 W - Accelerate forward
 A - Left
 S - Stop/Reverse
 D - Right

 CONTROLS:
 SPACE - Open phone
 Q - Accept Delivery
 E - Decline Delivery
 G - Buy fuel 
 ESC - Unstuck "
scroll_active = false

[node name="gps" type="TextureRect" parent="Control"]
margin_left = 391.0
margin_top = 14.0
margin_right = 648.0
margin_bottom = 313.0
rect_scale = Vector2( 1.04813, 0.813656 )
texture = ExtResource( 1 )

[node name="stop" type="TextureRect" parent="Control"]
margin_left = 688.0
margin_top = 14.0
margin_right = 945.0
margin_bottom = 313.0
rect_scale = Vector2( 1.03517, 0.779094 )
texture = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_left = 391.0
margin_top = 257.0
margin_right = 1021.0
margin_bottom = 469.0
rect_scale = Vector2( 0.891715, 1.08284 )
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
margin_left = 391.0
margin_top = 497.0
margin_right = 953.0
margin_bottom = 551.0
custom_colors/default_color = Color( 0.890196, 0.168627, 0.168627, 1 )
custom_fonts/normal_font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center] After accepting a delivery, GPS will direct you where to pick up and when to stop. Look for the burning ring of fire! [/center]"
text = " After accepting a delivery, GPS will direct you where to pick up and when to stop. Look for the burning ring of fire! "

[node name="Phone3" type="Sprite" parent="."]
position = Vector2( 168, 295.296 )
scale = Vector2( 0.21697, 0.196469 )
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="Phone3"]
margin_left = -456.284
margin_top = 746.703
margin_right = -296.284
margin_bottom = 783.703
rect_scale = Vector2( 5.56522, 7.74944 )
custom_fonts/font = ExtResource( 4 )
text = "Back to Start"

[node name="fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="fader" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 5 )

[node name="mouse_over" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="mouse_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="mouse_entered" from="Phone3/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Phone3/Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="fader" to="." method="_on_fader_animation_finished"]
